# symphony-RS

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_v2.md  ARCHITECTURE_v3.md  ARCHITECTURE_v4.md  ARCHITECTURE_v5.md  CHECKLIST.md  CHECKLIST_v2.md  CHECKLIST_v3.md  CHECKLIST_v4.md  CHECKLIST_v5.md  Cargo.toml  LICENSE  PLAN.md  PLAN_v2.md  PLAN_v3.md  PLAN_v5.md  PROMPT.md  PROMPT_v2.md  README.md  SPEC_v2.md  SPEC_v3.md  SPEC_v4.md  SPEC_v5.md  ralph.sh  rust-toolchain.toml
crates/symphony-agent/: Cargo.toml
crates/symphony-agent/src/: lib.rs  mcp.rs  mock.rs
crates/symphony-agent/src/claude/: mod.rs  protocol.rs  runner.rs
crates/symphony-agent/src/codex/: mod.rs  protocol.rs  runner.rs
crates/symphony-agent/src/tandem/: consensus.rs  draft_review.rs  mod.rs  split_implement.rs  telemetry.rs
crates/symphony-agent/tests/: fake_claude_subprocess.rs  fake_codex_subprocess.rs  parity_subprocess.rs
crates/symphony-agent/tests/common/: mod.rs
crates/symphony-cli/: Cargo.toml
crates/symphony-cli/src/: cancel.rs  cli.rs  dashboard.rs  debug.rs  issue.rs  logging.rs  main.rs  prompt_builders.rs  qa.rs  recover.rs  run.rs  scheduler.rs  sse.rs  status.rs  tui.rs  validate.rs  watch.rs
crates/symphony-cli/tests/: quickstart.rs  validate.rs
crates/symphony-config/: Cargo.toml
crates/symphony-config/src/: adapter_scope.rs  config.rs  layered.rs  lib.rs  loader.rs  role_catalog.rs
crates/symphony-config/tests/: sample_workflow_fixture.rs  workflow_docs.rs
crates/symphony-core/: Cargo.toml
crates/symphony-core/src/: advisory.rs  agent.rs  blocker.rs  blocker_gate.rs  budget_exceeded.rs  budget_pause_runner.rs  budget_pause_tick.rs  cancellation.rs  cancellation_event_log.rs  cancellation_observer.rs  cancellation_propagator.rs  concurrency_gate.rs  decomposition.rs  decomposition_applier.rs  decomposition_runner.rs  dispatcher_cooperation.rs  event_bus.rs  events.rs  followup.rs  followup_applier.rs  followup_approval_runner.rs  followup_approval_tick.rs  followup_policy.rs  followup_request.rs  followup_routing.rs  handoff.rs  intake_tick.rs  integration.rs  integration_request.rs  integration_runner.rs  integration_tick.rs  lease.rs  lib.rs  logical_queue.rs  parent_close.rs  poll_loop.rs  prompt.rs  pull_request.rs  qa.rs  qa_blocker.rs  (+22 more)
crates/symphony-core/tests/: phase_10_flow.rs  phase_13_happy_path.rs  phase_13_non_blocking_followup.rs  phase_13_qa_blocker_rework.rs  phase_13_unresolved_child_close.rs  phase_8_flow.rs  phase_9_flow.rs  serialization.rs
crates/symphony-mcp/: Cargo.toml
crates/symphony-mcp/src/: decomposition_tools.rs  followup_tools.rs  handler.rs  handoff_tools.rs  lib.rs  qa_verdict_tools.rs  read_tools.rs  registry.rs  server.rs
crates/symphony-state/: Cargo.toml
crates/symphony-state/src/: cancel_requests.rs  decomposition_apply.rs  dependency_reconciliation.rs  edges.rs  events.rs  followup_apply.rs  followups.rs  handoffs.rs  integration_queue.rs  integration_records.rs  lib.rs  migrations.rs  pending_tracker_syncs.rs  pull_request_records.rs  qa_queue.rs  qa_verdicts.rs  recovery_queue_source.rs  repository.rs  run_lease_store.rs  transaction.rs  workspace_claims.rs
crates/symphony-state/tests/: restart.rs
crates/symphony-tracker/: Cargo.toml
crates/symphony-tracker/graphql/linear/: queries.graphql  schema.graphql
crates/symphony-tracker/src/: conformance.rs  fixtures.rs  lib.rs  mock.rs  mutation_conformance.rs
crates/symphony-tracker/src/github/: adapter.rs  mod.rs
crates/symphony-tracker/src/linear/: adapter.rs  mod.rs  queries.rs
crates/symphony-tracker/tests/: conformance.rs  github.rs  linear.rs
crates/symphony-workspace/: Cargo.toml
crates/symphony-workspace/src/: git_ops.rs  lib.rs
crates/symphony-workspace/tests/: phase_13_dirty_wrong_branch.rs  pre_launch_gates.rs
docs/: qa.md  roles.md  upgrade.md  workflow.md  workspaces.md
docs/legacy/: ARCHITECTURE.md  CHECKLIST.md  PLAN.md
tests/fixtures/decomposition-parallel-sequential/: SCENARIO.md
tests/fixtures/decomposition-sequential/: SCENARIO.md
tests/fixtures/quickstart-workflow/: WORKFLOW.md  issues.yaml
tests/fixtures/sample-workflow/: WORKFLOW.md
tests/fixtures/sample-workflow/.symphony/roles/backend_engineer/: AGENTS.md  SOUL.md
tests/fixtures/sample-workflow/.symphony/roles/frontend_engineer/: AGENTS.md  SOUL.md
tests/fixtures/sample-workflow/.symphony/roles/platform_lead/: AGENTS.md  SOUL.md
tests/fixtures/sample-workflow/.symphony/roles/qa/: AGENTS.md  SOUL.md
