[package]
name = "symphony-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AgentRunner trait with Codex, Claude, and Tandem backends."

[dependencies]
symphony-core = { path = "../symphony-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
which.workspace = true
futures.workspace = true

[dev-dependencies]
tokio-test.workspace = true
rstest.workspace = true
insta.workspace = true
tempfile.workspace = true
