[package]
name = "symphony-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Symphony-RS command-line entry point."

[[bin]]
name = "symphony"
path = "src/main.rs"

[dependencies]
symphony-core = { path = "../symphony-core" }
symphony-config = { path = "../symphony-config" }
symphony-tracker = { path = "../symphony-tracker" }
symphony-agent = { path = "../symphony-agent" }
symphony-workspace = { path = "../symphony-workspace" }

anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
