[package]
name = "symphony-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Symphony-RS command-line entry point."

[[bin]]
name = "symphony"
path = "src/main.rs"

[dependencies]
symphony-core = { path = "../symphony-core" }
symphony-config = { path = "../symphony-config" }
symphony-tracker = { path = "../symphony-tracker" }
symphony-agent = { path = "../symphony-agent" }
symphony-state = { path = "../symphony-state" }
symphony-workspace = { path = "../symphony-workspace" }

anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
crossterm.workspace = true
dotenvy.workspace = true
futures.workspace = true
ratatui.workspace = true
reqwest = { workspace = true }
secrecy.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
reqwest = { workspace = true, features = ["stream"] }
tempfile.workspace = true
