[package]
name = "symphony-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WORKFLOW.md parser and layered configuration for Symphony-RS."

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
gray_matter.workspace = true
figment.workspace = true
thiserror.workspace = true
secrecy.workspace = true
tracing.workspace = true
notify.workspace = true

[dev-dependencies]
tempfile.workspace = true
# figment's `Jail` (process-isolated env-var fixture) is gated behind its
# `test` feature; we enable it as a dev-dependency for the layered-loader
# test suite.
figment = { workspace = true, features = ["test"] }
