[package]
name = "symphony-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Symphony orchestrator: poll loop, state machine, and trait surface."

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
futures.workspace = true
