[package]
name = "symphony-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
symphony-core = { path = "../symphony-core" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
