[package]
name = "symphony-tracker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TrackerRead/TrackerMutations traits and concrete adapters (Linear, GitHub, …)."

[dependencies]
symphony-core = { path = "../symphony-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
graphql_client.workspace = true
url.workspace = true
secrecy.workspace = true
octocrab.workspace = true
serde_yaml.workspace = true
http = "1.4.0"

[dev-dependencies]
wiremock.workspace = true
tokio-test.workspace = true
rstest.workspace = true
tempfile.workspace = true
